Fix overflow on mobile design and cipher description added.

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -14,6 +14,10 @@
     height: 100vh;
     margin: 0;
   }
+
+  a {
+    color: var(--secondary-color);
+  }
   
   #container {
     margin: 50px auto;
@@ -28,10 +32,15 @@
   }
   
   #title {
-    margin: 0 20px 50px;
+    margin: 0 20px 30px;
     text-align: center;
     font-weight: normal;
     font-size: 2.5rem;
+  }
+
+  .description {
+    text-align: center;
+    margin: 0 15px 25px;
   }
   
   #primary-input {
@@ -61,11 +70,9 @@
   }
   
   .result {
-    margin: 35px 0 0;
     text-align: center;
     font-weight: normal;
-    font-size: 2.3rem;
-    color: var(--secondary-color);
+    font-size: 1.4rem;
   }
 
   #truePalindrome {
@@ -80,5 +87,8 @@
     .arrow-back {
       top: 3rem;
       left: 3rem;
+    }
+    .result {
+      font-size: 2.3rem;
     }
   }
